@@ -950,7 +950,7 @@
 		<widget class="GtkCheckButton" id="events_toggle">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">_Play system sounds</property>
+		  <property name="label" translatable="yes">_Play alerts and sound effects</property>
 		  <property name="use_underline">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
@@ -988,7 +988,7 @@
 			<widget class="GtkCheckButton" id="input_feedback_toggle">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">Play sounds when buttons are pressed</property>
+			  <property name="label" translatable="yes">Play _sound effects when buttons are clicked</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
@@ -1007,7 +1007,7 @@
 			<widget class="GtkCheckButton" id="bell_audible_toggle">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">_Play system beep sound</property>
+			  <property name="label" translatable="yes">Play _alert sound</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
@@ -1063,7 +1063,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label17">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;Sound theme&lt;/b&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Sound Theme&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -1139,7 +1139,7 @@
 		  <child>
 		    <widget class="GtkLabel" id="label18">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">&lt;b&gt;System sounds&lt;/b&gt;</property>
+		      <property name="label" translatable="yes">&lt;b&gt;Alerts and Sound Effects&lt;/b&gt;</property>
 		      <property name="use_underline">False</property>
 		      <property name="use_markup">True</property>
 		      <property name="justify">GTK_JUSTIFY_LEFT</property>
